Added overview section, code optimization and declutter

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#certs">Certifications</a></li>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#" data-target="top">Overview</a></li>
+                    <li><a href="#" data-target="experience">Experience</a></li>
+                    <li><a href="#" data-target="skills">Skills</a></li>
+                    <li><a href="#" data-target="certs">Certifications</a></li>
+                    <li><a href="#" data-target="education">Education</a></li>
+                    <li><a href="#" data-target="contact">Contact</a></li>
                 </ul>
             </nav>
             <button id="menuToggle" class="btn" style="display:none;">☰</button>
@@ -41,11 +42,12 @@
     <div id="mobileMenu" class="menu">
         <button id="closeMenu">✖</button>
         <ul>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#certs">Certifications</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#" data-target="top">Overview</a></li>
+            <li><a href="#" data-target="experience">Experience</a></li>
+            <li><a href="#" data-target="skills">Skills</a></li>
+            <li><a href="#" data-target="certs">Certifications</a></li>
+            <li><a href="#" data-target="education">Education</a></li>
+            <li><a href="#" data-target="contact">Contact</a></li>
             <li><a href="#" onclick="downloadCV(event);">Download CV</a></li>
         </ul>
     </div>
